v8/tests/messages/break-label.out
break-label.js:2: Uncaught SyntaxError: Unexpected number
  break 1;
        ^
